# winnow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  README.md  docker-compose.full.yml  docker-compose.yml  fly.toml  pyproject.toml  railway.json
.github/workflows/: check-fixtures-fresh.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_gmail_state.py  0003_learning_loop.py
apps/api/tests/: conftest.py  test_action_labels.py  test_agent_schemas.py  test_bootstrap_cli.py  test_config.py  test_config_db.py  test_dual_scoping_invariant.py  test_eval_harness.py  test_eval_metrics.py  test_features.py  test_fernet.py  test_fixture_provider.py  test_fixtures.py  test_freshness_check.py  test_gmail_mode_gate.py  test_gmail_parse.py  test_gmail_pubsub.py  test_gmail_sync.py  test_hashes.py  test_inference.py  test_learning_artifacts.py  test_live_tier2_config.py  test_orchestrator.py  test_realapp.py  test_retrainer_guardrails.py  test_simulated_week.py
apps/api/winnow_api/: cli.py  config.py  main.py
apps/api/winnow_api/agents/: __init__.py  fixture_provider.py  live_provider.py  prompts.py  provider.py  schemas.py  triage_agent.py
apps/api/winnow_api/classifier/: __init__.py  embeddings.py  features.py  inference.py  model.py  train.py
apps/api/winnow_api/classifier/artifacts/: base.joblib
apps/api/winnow_api/commands/: bootstrap.py  eval_cli.py  gmail_cli.py  retrain_cli.py
apps/api/winnow_api/db/: __init__.py  base.py  models.py
apps/api/winnow_api/demo/: fixtures.py  routes.py  seeder.py  session.py
apps/api/winnow_api/eval/: __init__.py  dataset.py  harness.py  metrics.py  report_writer.py  strategies.py
apps/api/winnow_api/gmail/: __init__.py  client.py  ingest.py  oauth.py  pubsub.py  routes.py  sync.py
apps/api/winnow_api/learning/: __init__.py  action_labels.py  artifacts.py  retrainer.py  scheduler.py  training_writer.py
apps/api/winnow_api/realapp/: __init__.py  routes.py
apps/api/winnow_api/security/: __init__.py  fernet.py
apps/api/winnow_api/triage/: __init__.py  orchestrator.py
apps/site/: next.config.mjs  package-lock.json  package.json  (+1 more)
docs/: architecture.md  evals.md
(+25 files in other folders)
